# rita

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README.md  VERSION  config.status  configure  configure.ac  test_rita.sh  test_rita.sh.in
doc/: Makefile  Makefile.am  Makefile.in  index.html  mesh.html  prepros-6.config
doc/css/: Makefile  Makefile.am  Makefile.in  rt.css  style.css
doc/fonts/: Makefile  Makefile.am  Makefile.in
doc/fonts/bootstrap/: Makefile  Makefile.am  Makefile.in
doc/fonts/icomoon/: Makefile  Makefile.am  Makefile.in
doc/images/: Makefile  Makefile.am  Makefile.in
doc/js/: Makefile  Makefile.am  Makefile.in
doc/sass/: Makefile  Makefile.am  Makefile.in
doc/sass/bootstrap/: Makefile  Makefile.am  Makefile.in
doc/sass/bootstrap/mixins/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  approximation.cpp  approximation.h  cmd.cpp  cmd.h  config.h  config.h.in  configure.cpp  configure.h  data.cpp  data.h  eigen.cpp  eigen.h  equa.cpp  equa.h  help.h  integration.cpp  integration.h  mesh.cpp  mesh.h  optim.cpp  optim.h  rita.cpp  rita.h  ritaException.h  runAE.cpp  runODE.cpp  runPDE.cpp  solve.cpp  solve.h  stationary.cpp  stationary.h  transient.cpp  transient.h
tutorial/: Makefile  Makefile.am  Makefile.in  README
tutorial/ae/: Makefile  Makefile.am  Makefile.in  example1.rita  example2.rita  example3.rita
tutorial/approximation/: Makefile  Makefile.am  Makefile.in  example1.rita  ran  ran.cpp
tutorial/eigen/: Makefile  Makefile.am  Makefile.in
tutorial/integration/: .irisrc  Makefile  Makefile.am  Makefile.in  example1.rita  example2.rita
tutorial/ode/: Makefile  Makefile.am  Makefile.in  README  example1.rita  example2.rita
tutorial/optim/: .rita.his  Makefile  Makefile.am  Makefile.in  example1.rita  example2.rita  example3.rita  example4.rita
tutorial/pde/: .irisrc  Makefile  Makefile.am  Makefile.in  example1.rita  example2.rita  example3.rita  example4.rita  example5.rita
