
MAINTAINERCLEANFILES = Makefile.in

cssdir = $(datadir)/rita/doc

css_DATA = animate.css \
           bootstrap.css \
           flexslider.css \
           icomoon.css \
           owl.carousel.min.css \
           owl.theme.default.min.css \
           rt.css \
           style.css \
           bootstrap.css.map \
           style.css.map

dist_css_DATA = animate.css \
                bootstrap.css \
                flexslider.css \
                icomoon.css \
                owl.carousel.min.css \
                owl.theme.default.min.css \
                rt.css \
                style.css \
                bootstrap.css.map \
                style.css.map
