
MAINTAINERCLEANFILES = Makefile.in

jsdir = $(datadir)/rita/doc

js_DATA = jquery.waypoints.min.js \
          bootstrap.min.js \
          main.js \
          jquery.countTo.js \
          modernizr-2.6.2.min.js \
          jquery.easing.1.3.js \
          jquery.flexslider-min.js \
          owl.carousel.min.js \
          jquery.min.js \
          respond.min.js

dist_js_DATA = jquery.waypoints.min.js \
               bootstrap.min.js \
               main.js \
               jquery.countTo.js \
               modernizr-2.6.2.min.js \
               jquery.easing.1.3.js \
               jquery.flexslider-min.js \
               owl.carousel.min.js \
               jquery.min.js \
               respond.min.js
