
MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = bootstrap

sassdir = $(datadir)/rita/doc/sass

sass_DATA = _bootstrap-compass.scss \
            _bootstrap-mincer.scss \
            _bootstrap-sprockets.scss \
            bootstrap.scss \
            style.scss

dist_sass_DATA = _bootstrap-compass.scss \
                 _bootstrap-mincer.scss \
                 _bootstrap-sprockets.scss \
                 bootstrap.scss \
                 style.scss
