
MAINTAINERCLEANFILES = Makefile.in

tutorialODEdir = $(datadir)/rita/tutorial

tutorialODE_DATA = README \
                   example1.rita \
                   example2.rita \
                   example3.rita

dist_tutorialODE_DATA = README \
                        example1.rita \
                        example2.rita \
                        example3.rita

clean-local:
	-rm -f *.dat *.sol .rita.log .rita.his .rita.rc.backup

