
MAINTAINERCLEANFILES = Makefile.in

tutorialAEdir = $(datadir)/rita/tutorial/ae

tutorialAE_DATA = README \
                  example1.rita \
                  example2.rita \
                  example3.rita

dist_tutorialAE_DATA = README \
                       example1.rita \
                       example2.rita \
                       example3.rita

clean-local:
	-rm -f *.dat *.sol .rita.log .rita.his

