
MAINTAINERCLEANFILES = Makefile.in

tutorialAPPROXdir = $(datadir)/rita/tutorial/approximation

tutorialAPPROX_DATA = README \
                     example1.rita \
                     example2.rita

dist_tutorialAPPROX_DATA = README \
                   example1.rita \
                   example2.rita

clean-local:
	-rm -f .rita.his .rita.log

