
MAINTAINERCLEANFILES = Makefile.in

tutorialINTEGRATIONdir = $(datadir)/rita/tutorial/integration

tutorialINTEGRATION_DATA = README \
                           example1.rita \
                           example2.rita

dist_tutorialINTEGRATION_DATA = README \
                                example1.rita \
                                example2.rita

clean-local:
	-rm -f *.dat *.sol .rita.log .rita.his

