
MAINTAINERCLEANFILES = Makefile.in

tutorialODEdir = $(datadir)/rita/tutorial

tutorialODE_DATA = README \
                   example1.rita \
                   example2.rita

dist_tutorialODE_DATA = README \
                        example1.rita \
                        example2.rita

clean-local:
	-rm -f *.dat *.sol *.log *.his .ritarc.backup

