
MAINTAINERCLEANFILES = Makefile.in

tutorialOPTIMdir = $(datadir)/rita/tutorial/optim

tutorialOPTIM_DATA = README \
                     example1.rita \
                     example2.rita \
                     example3.rita \
                     example4.rita

dist_tutorialOPTIM_DATA = README \
                   example1.rita \
                   example2.rita \
                   example3.rita \
                   example4.rita

clean-local:
	-rm -f .rita.his .rita.log

