
MAINTAINERCLEANFILES = Makefile.in

tutorialPDEdir = $(datadir)/rita/tutorial/pde

tutorialPDE_DATA = README \
                   example1.rita \
                   example2.rita \
                   example3.rita \
                   example4.rita \
                   example5.rita

dist_tutorialPDE_DATA = README \
                        example1.rita \
                        example2.rita \
                        example3.rita \
                        example4.rita \
                        example5.rita

clean-local:
	-rm -f *.bamg *.dom rita.m *.geo *.pos *.vtk rita-1d.m example*.m *.msh *.sol .rita.log .rita.his

