
MAINTAINERCLEANFILES = Makefile.in

bootstrap = $(datadir)/Iris/doc/html/fonts

html_DATA = glyphicons-halflings-regular.eot \
            glyphicons-halflings-regular.woff \
            glyphicons-halflings-regular.woff2 \
            glyphicons-halflings-regular.ttf \
            glyphicons-halflings-regular.svg

dist_html_DATA = glyphicons-halflings-regular.eot \
                 glyphicons-halflings-regular.woff \
                 glyphicons-halflings-regular.woff2 \
                 glyphicons-halflings-regular.ttf \
                 glyphicons-halflings-regular.svg
