
MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = mixins

sassbootstrapdir = $(datadir)/rita/doc/sass/bootstrap

sassbootstrap_DATA = _navs.scss \
                     _alerts.scss \
                     _normalize.scss \
                     _badges.scss \
                     _pager.scss \
                     _breadcrumbs.scss \
                     _pagination.scss \
                     _button-groups.scss \
                     _panels.scss \
                     _buttons.scss \
                     _popovers.scss \
                     _carousel.scss \
                     _print.scss \
                     _close.scss \
                     _progress-bars.scss \
                     _code.scss \
                     _responsive-embed.scss \
                     _component-animations.scss \
                     _responsive-utilities.scss \
                     _dropdowns.scss \
                     _scaffolding.scss \
                     _forms.scss \
                     _tables.scss \
                     _glyphicons.scss \
                     _theme.scss \
                     _grid.scss \
                     _thumbnails.scss \
                     _input-groups.scss \
                     _tooltip.scss \
                     _jumbotron.scss \
                     _type.scss \
                     _labels.scss \
                     _utilities.scss \
                     _list-group.scss \
                     _variables.scss \
                     _media.scss \
                     _wells.scss \
                     _mixins.scss \
                     _modals.scss \
                     _navbar.scss

dist_sassbootstrap_DATA = _navs.scss \
                          _alerts.scss \
                          _normalize.scss \
                          _badges.scss \
                          _pager.scss \
                          _breadcrumbs.scss \
                          _pagination.scss \
                          _button-groups.scss \
                          _panels.scss \
                          _buttons.scss \
                          _popovers.scss \
                          _carousel.scss \
                          _print.scss \
                          _close.scss \
                          _progress-bars.scss \
                          _code.scss \
                          _responsive-embed.scss \
                          _component-animations.scss \
                          _responsive-utilities.scss \
                          _dropdowns.scss \
                          _scaffolding.scss \
                          _forms.scss \
                          _tables.scss \
                          _glyphicons.scss \
                          _theme.scss \
                          _grid.scss \
                          _thumbnails.scss \
                          _input-groups.scss \
                          _tooltip.scss \
                          _jumbotron.scss \
                          _type.scss \
                          _labels.scss \
                          _utilities.scss \
                          _list-group.scss \
                          _variables.scss \
                          _media.scss \
                          _wells.scss \
                          _mixins.scss \
                          _modals.scss \
                          _navbar.scss
