
MAINTAINERCLEANFILES = Makefile.in

mixinsdir = $(datadir)/rita/doc/sass/bootstrap/mixins

mixins_DATA = _nav-vertical-align.scss \
              _alerts.scss \
              _opacity.scss \
              _background-variant.scss \
              _pagination.scss \
              _border-radius.scss \
              _panels.scss \
              _buttons.scss \
              _progress-bar.scss \
              _center-block.scss \
              _reset-filter.scss \
              _clearfix.scss \
              _reset-text.scss \
              _forms.scss \
              _resize.scss \
              _gradients.scss \
              _responsive-visibility.scss \
              _grid-framework.scss \
              _size.scss \
              _grid.scss \
              _tab-focus.scss \
              _hide-text.scss \
              _table-row.scss \
              _image.scss \
              _text-emphasis.scss \
              _labels.scss \
              _text-overflow.scss \
              _list-group.scss \
              _vendor-prefixes.scss \
              _nav-divider.scss


dist_mixins_DATA = _nav-vertical-align.scss \
                   _alerts.scss \
                   _opacity.scss \
                   _background-variant.scss \
                   _pagination.scss \
                   _border-radius.scss \
                   _panels.scss \
                   _buttons.scss \
                   _progress-bar.scss \
                   _center-block.scss \
                   _reset-filter.scss \
                   _clearfix.scss \
                   _reset-text.scss \
                   _forms.scss \
                   _resize.scss \
                   _gradients.scss \
                   _responsive-visibility.scss \
                   _grid-framework.scss \
                   _size.scss \
                   _grid.scss \
                   _tab-focus.scss \
                   _hide-text.scss \
                   _table-row.scss \
                   _image.scss \
                   _text-emphasis.scss \
                   _labels.scss \
                   _text-overflow.scss \
                   _list-group.scss \
                   _vendor-prefixes.scss \
                   _nav-divider.scss
